@@ -5,8 +5,8 @@
 exReport(formula, data = NULL, subset = NULL, na.action = na.retain,
   autoother = FALSE, sort = TRUE, whenapp = NULL, erdata = NULL,
   panel = "excl", subpanel = NULL, head = NULL, tail = NULL, h = 5.5,
-  w = 6.5, hc = 4.5, wc = 5, append = FALSE, popts = NULL,
-  app = TRUE)
+  w = 6.5, hc = 4.5, wc = 5, adjustwidth = "-0.75in", append = FALSE,
+  popts = NULL, app = TRUE)
 }
 \arguments{
   \item{formula}{a formula with only a right-hand side,
@@ -75,6 +75,13 @@ exReport(formula, data = NULL, subset = NULL, na.action = na.retain,
   \item{hc}{height of cumulative exclusion 1-panel graph}
 
   \item{wc}{width of this 1-panel graph}
+
+  \item{adjustwidth}{used to allow wide detailed exclusion
+  table to go into left margin in order to be centered on
+  the physical page.  The default is \code{'-0.75in'},
+  which works well when using article document class with
+  default page width.  To use the geometry package in LaTeX
+  with margin=.45in specify \code{adjustwidth='+.90in'}.}
 
   \item{append}{set to \code{TRUE} if adding to an existing
   sub-report}
