@@ -2,4 +2,7 @@ Changes in version 0.5-1 (2014-03-??)
    * survReport: changed to use npsurv instead of survfit.formula
 	 * exReport: changed order of output so that analysis of randomized patients marked for exclusions appears last; use LaTeX chngpage package to allow detailed table to go into left margin so as to be centered on page
    * exReport: added adjustwidth argument
-
+	 * accrualReport: allowed enrollment target N to be omitted
+   * exReport: fine tuning
+   * nriskReport: new report to show number of subjects still being followed at each day
+	 * Merge: added support for data.table
